# routstr-service

./: .gitignore  fly.toml  index.js  nixpacks.toml  package-lock.json  package.json  test-x402.mjs
docs/: agent-profile-design.md  relay-paywall-design.md  traspaso-airadar.md
public/partners-data/airadar/: metadata.json
scripts/: publish-nostr.mjs  relay-write-policy.mjs
sdk/: jsr.json  package.json  test.mjs
sdk-python/: pyproject.toml
sdk-python/airadar/: __init__.py  client.py  langchain_tools.py
sdk/src/: client.js  endpoints.js  index.js  x402-viem.js
src/: agentanalysis.js  ai-tools.js  analytics.js  antseed.js  attestations.js  cashu.js  checker.js  compute.js  data.js  db.js  fetch.js  gateway.js  intelligence.js  iota-pay.js  marketplace.js  mcp.js  memory.js  monitoring.js  net-guard.js  nostr.js  openapi.js  openrouter.js  ots.js  reputation.js  search.js  server.js  state.js  x402.js
