[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airadar-sdk"
version = "0.1.0"
description = "Python SDK for AIRadar — AI provider directory with L402/x402 payments"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AIRadar" }]
keywords = ["ai", "llm", "lightning", "l402", "x402", "usdc", "payments", "nostr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://airadar.fyi"
Repository = "https://github.com/manelomanu/routstr-service"

[tool.hatch.build.targets.wheel]
packages = ["airadar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
